@@ -638,6 +638,7 @@ enum {
   Rs_borderLess,
   Rs_lineSpace,
   Rs_cursorUnderline,
+  Rs_intensityStyles,
 #endif
 #if CURSOR_BLINK
   Rs_cursorBlink,
@@ -829,18 +830,18 @@ enum {
 #define GET_BASEFG(x)           (((x) & RS_fgMask))
 #define GET_BASEBG(x)           (((x) & RS_bgMask)>>Color_Bits)
 #ifndef NO_BRIGHTCOLOR
-# define GET_FGCOLOR(x)                                          \
-    ((((x) & RS_Bold) == 0                                       \
-      || GET_BASEFG (x) < minCOLOR                               \
-      || GET_BASEFG (x) >= minBrightCOLOR)                       \
-     ? GET_BASEFG (x)                                            \
-     : (GET_BASEFG (x) + (minBrightCOLOR - minCOLOR)))
-# define GET_BGCOLOR(x)                                          \
-    ((((x) & RS_Blink) == 0                                      \
-      || GET_BASEBG (x) < minCOLOR                               \
-      || GET_BASEBG (x) >= minBrightCOLOR)                       \
-     ? GET_BASEBG (x)                                            \
-     : (GET_BASEBG (x) + (minBrightCOLOR - minCOLOR)))
+# define GET_FGCOLOR(x) (                                        \
+     !((x) & RS_Bold)                                            \
+     || (ENABLE_STYLES && !(options & Opt_intensityStyles))      \
+     || !IN_RANGE_INC (GET_BASEFG (x), minCOLOR, minBrightCOLOR) \
+       ? GET_BASEFG (x)                                          \
+       : (GET_BASEFG (x) + (minBrightCOLOR - minCOLOR)))
+# define GET_BGCOLOR(x) (                                        \
+     !((x) & RS_Blink)                                           \
+     || (ENABLE_STYLES && !(options & Opt_intensityStyles))      \
+     || !IN_RANGE_INC (GET_BASEBG (x), minCOLOR, minBrightCOLOR) \
+       ? GET_BASEBG (x)                                          \
+       : (GET_BASEBG (x) + (minBrightCOLOR - minCOLOR)))
 #else
 # define GET_FGCOLOR(x)         GET_BASEFG(x)
 # define GET_BGCOLOR(x)         GET_BASEBG(x)
