@@ -261,13 +261,18 @@ typedef struct {
 # define Opt_borderLess		 0
 # define Opt_hold		 0
 #endif
+#if ENABLE_STYLES
+# define Opt_intensityStyles	 (1UL<<27) // font styles imply intensity
+#else
+# define Opt_intensityStyles	 0
+#endif
 /* place holder used for parsing command-line options */
 #define Opt_Reverse              (1UL<<30)
 #define Opt_Boolean              (1UL<<31)
 
 #define DEFAULT_OPTIONS          (Opt_scrollBar | Opt_scrollTtyOutput \
                                   | Opt_jumpScroll | Opt_secondaryScreen \
-                                  | Opt_pastableTabs)
+                                  | Opt_pastableTabs | Opt_intensityStyles)
 
 /* ------------------------------------------------------------------------- */
 
