@@ -207,6 +207,7 @@ optList[] = {
               STRG (Rs_boldFont, "boldFont", "fb", "fontname", "bold font"),
               STRG (Rs_italicFont, "italicFont", "fi", "fontname", "italic font"),
               STRG (Rs_boldItalicFont, "boldItalicFont", "fbi", "fontname", "bold italic font"),
+              BOOL (Rs_intensityStyles, "intensityStyles", "is", Opt_intensityStyles, "font styles imply intensity changes"),
 #endif
 #ifdef USE_XIM
               STRG (Rs_inputMethod, "inputMethod", "im", "name", "name of input method"),
